<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.worm2fed.kursach_prog.MainActivity" >

    <Button
        android:id="@+id/open_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onOpenFileClick"
        android:text="@string/choose_file" />

    <TextView
        android:id="@+id/file_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/open_file"
        android:layout_alignLeft="@+id/open_file"
        android:layout_alignRight="@+id/open_file"
        android:layout_alignStart="@+id/open_file"
        android:layout_below="@+id/open_file" />

    <Button
        android:id="@+id/assembl"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/file_path"
        android:layout_alignLeft="@+id/file_path"
        android:layout_alignRight="@+id/file_path"
        android:layout_alignStart="@+id/file_path"
        android:layout_below="@+id/file_path"
        android:onClick="onAssemblClick"
        android:text="@string/assembl" />

    <TextView
        android:id="@+id/object_code_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/assembl"
        android:layout_alignLeft="@+id/assembl"
        android:layout_alignRight="@+id/assembl"
        android:layout_alignStart="@+id/assembl"
        android:layout_below="@+id/assembl"
        android:text="@string/object_code_com" />

    <Button
        android:id="@+id/show_object_code"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/object_code_com"
        android:layout_alignLeft="@+id/object_code_com"
        android:layout_alignRight="@+id/object_code_com"
        android:layout_alignStart="@+id/object_code_com"
        android:layout_below="@+id/object_code_com"
        android:onClick="onShowObjectCodeClick"
        android:text="@string/show_object_code" />

    <Button
        android:id="@+id/show_listing"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/show_object_code"
        android:layout_alignLeft="@+id/show_object_code"
        android:layout_alignRight="@+id/show_object_code"
        android:layout_alignStart="@+id/show_object_code"
        android:layout_below="@+id/show_object_code"
        android:onClick="onShowListingClick"
        android:text="@string/show_listing" />

    <Button
        android:id="@+id/run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/show_listing"
        android:layout_alignLeft="@+id/show_listing"
        android:layout_alignRight="@+id/show_listing"
        android:layout_alignStart="@+id/show_listing"
        android:layout_below="@+id/show_listing"
        android:onClick="onRunClick"
        android:text="@string/run" />

</RelativeLayout>