<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.worm2fed.kursach_prog.RunActivity" >

    <TextView
        android:id="@+id/reg1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/reg1" />

    <TextView
        android:id="@+id/reg2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg1_text"
        android:layout_alignStart="@+id/reg1_text"
        android:layout_below="@+id/reg1_text"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/reg2" />

    <TextView
        android:id="@+id/reg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reg2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/reg2"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/reg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/reg2_text"
        android:layout_toEndOf="@+id/reg2_text"
        android:layout_toRightOf="@+id/reg2_text"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp" />

    <View
        android:id="@+id/separator1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/reg2_text"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <View
        android:id="@+id/separator2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/flags_text"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <TextView
        android:id="@+id/mem_left_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/separator2"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/mem_left" />

    <TextView
        android:id="@+id/mem_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mem_left_text"
        android:layout_alignBottom="@+id/mem_left_text"
        android:layout_alignEnd="@+id/separator2"
        android:layout_alignRight="@+id/separator2"
        android:layout_toEndOf="@+id/mem_left_text"
        android:layout_toRightOf="@+id/mem_left_text"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/show_mem_left"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mem_left_text"
        android:onClick="onShowMemLeftClick"
        android:text="@string/show_mem_left" />

    <View
        android:id="@+id/separator3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/show_mem_left"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <TextView
        android:id="@+id/flags_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/separator2"
        android:layout_alignStart="@+id/separator1"
        android:layout_below="@+id/separator1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/reg_flag" />

    <TextView
        android:id="@+id/reg_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/flags_text"
        android:layout_alignBottom="@+id/flags_text"
        android:layout_alignEnd="@+id/separator1"
        android:layout_alignRight="@+id/separator1"
        android:layout_toEndOf="@+id/flags_text"
        android:layout_toRightOf="@+id/flags_text"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/run_alu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/show_mem_left"
        android:onClick="onRunAluClick"
        android:text="@string/run" />

    <View
        android:id="@+id/separator4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/run_alu"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/darker_gray"
        android:visibility="visible" />

    <TextView
        android:id="@+id/last_ten_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/run_alu"
        android:textSize="20sp" />

</RelativeLayout>